--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid">
-          <div class="contact_nav">
+          <div class="contact_nav d-none d-lg-flex">
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
