--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
   <!-- feature section -->
   <section class="feature_section">
     <div class="container">
+       <h5 class="name lg-none d-flex">
+            Skills
+          </h5>
       <div class="feature_container">
         <div class="box">
           <div class="img-box">
