--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- feature section -->
   <section class="feature_section">
     <div class="container">
-       <h5 class="name lg-none d-flex">
+       <h5 class="text-center my-lg-0 my-4 lg-none d-flex">
             Skills
           </h5>
       <div class="feature_container">
@@ -509,24 +509,28 @@
               <div class="col-md-4">
                 <a href="">
                   <div class="item ">
+                       <a href="tel:+923236602316"
                     <div class="img-box ">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
                     <p>
-                      +02 1234567890
+                      +923236602316
                     </p>
+                </a>
                   </div>
                 </a>
               </div>
               <div class="col-md-4">
                 <a href="">
                   <div class="item ">
+                    <a href="mailto:moazk4452@gmail.com"
                     <div class="img-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <p>
-                      demo@gmail.com
+                      moazk445@gmail.com
                     </p>
+                </a>
                   </div>
                 </a>
               </div>
