--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               <div class="col-md-4">
                 <a href="">
                   <div class="item ">
-                       <a href="tel:+923236602316"
+                       <a href="tel:+923236602316" class="text-light"
                     <div class="img-box ">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
@@ -523,7 +523,7 @@
               <div class="col-md-4">
                 <a href="">
                   <div class="item ">
-                    <a href="mailto:moazk4452@gmail.com"
+                    <a href="mailto:moazk4452@gmail.com" class="text-light"
                     <div class="img-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
