--- a/index.html
+++ b/index.html
@@ -509,11 +509,11 @@
               <div class="col-md-4">
                 <a href="">
                   <div class="item ">
-                       <a href="tel:+923236602316" class="text-light"
+                       <a href="tel:+923236602316"
                     <div class="img-box ">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
-                    <p>
+                    <p  class="text-light">
                       +923236602316
                     </p>
                 </a>
@@ -523,11 +523,11 @@
               <div class="col-md-4">
                 <a href="">
                   <div class="item ">
-                    <a href="mailto:moazk4452@gmail.com" class="text-light"
+                    <a href="mailto:moazk4452@gmail.com" 
                     <div class="img-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
-                    <p>
+                    <p class="text-light">
                       moazk445@gmail.com
                     </p>
                 </a>
@@ -569,7 +569,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayDateYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">moazrehmani.portfolio</a>
       </p>
     </div>
   </footer>
