--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- feature section -->
   <section class="feature_section">
     <div class="container">
-       <h5 class="text-center my-lg-0 my-4 lg-none d-flex">
+       <h5 class="mx-auto fs-1 my-lg-0 my-4 lg-none d-flex">
             Skills
           </h5>
       <div class="feature_container">
