--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <!-- feature section -->
   <section class="feature_section">
     <div class="container">
-      <h5 class="text-center fs-1 my-4 d-lg-none">
+      <h5 class="text-center fs-1 my-4 d-lg-none fw-bolder">
             Skills
           </h5>
       <div class="feature_container">
