--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                Inance
+                Potfolio
               </span>
             </a>
 
@@ -138,13 +138,13 @@
                 </a>
               </div>
               <div class="col-md-4">
-                <a href="">
+                <a href="https://wa.me/923236602316?text=Hello%20I%20need%20help">
                   <div class="item ">
                     <div class="img-box ">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
                     <p>
-                      +02 1234567890
+                      +923236602316
                     </p>
                   </div>
                 </a>
