--- a/index.html
+++ b/index.html
@@ -574,6 +574,9 @@
     </div>
   </footer>
   <!-- footer section -->
+  <a href="https://wa.me/923236602316?text=Hello%20I%20need%20help" target="_blank" class="whatsapp-icon">
+        <i class="fab fa-whatsapp"></i>
+  </a>
 
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
