--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
         <div class="col-md-6">
           <form action="">
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Name" class="text-light bg-dark" />
             </div>
             <div>
               <input type="text" placeholder="Phone Number" />
