--- a/contact.html
+++ b/contact.html
@@ -100,16 +100,16 @@
         <div class="col-md-6">
           <form action="">
             <div>
-              <input type="text" placeholder="Name" class="text-light bg-dark" />
+              <input type="text" placeholder="Name" class="text-dark" />
             </div>
             <div>
-              <input type="text" placeholder="Phone Number" />
+              <input type="text" placeholder="Phone Number" class="text-dark" />
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email" class="text-dark" />
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Message" class="text-dark"  />
             </div>
             <div class="d-flex ">
               <button>
