--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Portfolio</title>
-
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -96,7 +96,7 @@
       <div class="container ">
         <div class="row">
           <div class="col-md-6 ">
-            <div class="detail-box">
+            <div class="detail-box" data-aos="fade-down">
               <h1>
                 Web
                 Developer
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="img-box">
+            <div class="img-box" data-aos="fade-up">
               <img src="images\m-1.png" alt="">
             </div>
           </div>
@@ -129,7 +129,7 @@
       <h5 class="text-center fs-1 my-4 d-lg-none fw-bolder">
             Skills
           </h5>
-      <div class="feature_container">
+      <div class="feature_container" data-aos="flip-down">
         <div class="box">
           <div class="img-box">
             <svg xmlns="http://www.w3.org/2000/svg"
