--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Portfolio</title>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -582,6 +581,16 @@
   <script src="js/bootstrap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+
+        AOS.init(
+            {
+                offset: 50,
+                duration: 1000,
+            });
+
+    </script>
   <script src="js/custom.js"></script>
   <!-- Google Map -->
   <script
